# web-activity-logger

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.ci/: requirements.txt
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: check-python.yml
docs/: conf.py  index.md
src/: app.py  config.py  main.wsgi
src/activity_logger/: __init__.py  models.py  skeleton.py
src/activity_logger/blog_posts/: forms.py  views.py
src/activity_logger/core/: views.py
src/activity_logger/dashboard/: __init__.py  dash_plot.py
src/activity_logger/error_pages/: handlers.py
src/activity_logger/models/: __init__.py  build.py  db_activites.py  org.py
src/activity_logger/static/: master.css
src/activity_logger/templates/: activities.html  base.html  index.html  info.html  login.html  my_dash.html  register.html  result.html
src/activity_logger/templates/admin/: index.html
src/activity_logger/users/: forms.py  picture_handler.py  views.py
tests/: conftest.py  test_dash.py  test_models.py  test_security.py  test_skeleton.py  test_users.py
